# weather

./: .gitignore  LICENSE  README.md  pyproject.toml
src/example_package_weather/: __init__.py  example.py
src/exemples/: exemple_library.ipynb
src/weather_visualization/: __init__.py  example.py
tests/: test_library.py
